<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ns1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    ns1:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:text="@string/my_location"

        android:textColor="@android:color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_selected_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tv_selected_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/location_is_empty"
            android:padding="15dp"

            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:ns2="http://schemas.android.com/apk/res-auto"
        xmlns:ns3="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_selected_location"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        ns2:cardCornerRadius="4dp"
        ns3:cardUseCompatPadding="true">

        <Button
            android:id="@+id/btn_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/click_here_to_change_location"

            android:textColor="@android:color/black" />
    </androidx.cardview.widget.CardView>>
</RelativeLayout>
